--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </style>
   </head>
   <body>
-    <h1>JavaScript-Programming: Conditionals-pt1 and conditionals-bmi-calculator </h1>
+    <h1>JavaScript-Programming: ES06-Classes </h1>
 
     <script src="solution.js"></script>
   </body>
